# domain-grabber

./: .gitignore  Makefile  Makefile.in  README.md  configure.ac  domain.c  list.c  list.h  main.c  stack.c
src/: domain.c  domain.h  main.c  stack.h
